@@ -1,6 +1,7 @@
 0.83.4
   - Fixed loading saved states in fullscreen mode with
-    the "aspect=true" setting. (Wengier)
+    the "aspect=true" setting. The timestamp for the
+    saved states will be shown in the menu. (Wengier)
   - Added key mapper for sending the Ctrl+Alt+Del key,
     with HOST(F11/F12)+Del by default. (Wengier)
   - Added dosbox-x.conf setting to ignore the EGA/VGA
